--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,7 +60,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: monitor
-          args: --file=./Dockerfile --project-name=insn0w/gitops
+          args: --docker application/vnd.docker.distribution --file=./Dockerfile --project-name=insn0w/gitops
 
   SAST:
     needs: [ unit-test ]
