--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,7 +49,7 @@ jobs:
       uses: actions/checkout@v2
 
   SAST:
-    needs: [ database-integration ]
+    needs: [ unit-test ]
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
