--- a/charts/helm/values.yaml
+++ b/charts/helm/values.yaml
@@ -1,12 +1,12 @@
-# Default values for helm-example.
+# Default values for helm.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
   pullPolicy: IfNotPresent
-  repository: 145664717845.dkr.ecr.ap-south-1.amazonaws.com/gitops-argocd
+  repository: 520065622224.dkr.ecr.us-east-1.amazonaws.com/gitops
   version: main-c1eecd3
 
 imagePullSecrets: []
