--- a/charts/helm/values.yaml
+++ b/charts/helm/values.yaml
@@ -41,12 +41,12 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: chart.local
       paths: []
   tls: []
-  #  - secretName: chart-example-tls
+  #  - secretName: chart-tls
   #    hosts:
-  #      - chart-example.local
+  #      - chart.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
