--- a/charts/helm/values.yaml
+++ b/charts/helm/values.yaml
@@ -7,7 +7,8 @@ replicaCount: 2
 image:
   pullPolicy: IfNotPresent
   repository: 520065622224.dkr.ecr.us-east-2.amazonaws.com/gitops
-  version: main-4d07e95
+  #version: main-4d07e95
+  version: main-20d1be2
 
 imagePullSecrets: []
 nameOverride: ""
